--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -109,7 +109,6 @@
      .breaking {
          background-color: $accent;
          padding-bottom: 80px;
-         margin-bottom: 100px;
          &__inner {
              display: grid;
              grid-template-columns: repeat(2, 1fr);
@@ -331,6 +330,7 @@
              display: grid;
              grid-template-columns: repeat(5, 1fr);
              grid-gap: 30px;
+             margin-bottom: 50px;
          }
          &__item {
              border: 2px solid $border;
@@ -342,6 +342,24 @@
              box-shadow: 0px 0px 30px rgba(116, 138, 0, 0.2);
              &:hover {
                  background-color: $border;
+             }
+         }
+         &__btn {
+             display: flex;
+             justify-content: center;
+         }
+         &__btn-link {
+             padding: 16px 22px;
+             @extend%montserrat-700;
+             background-color: $accent;
+             font-size: 15px;
+             line-height: 18px;
+             color: #fff;
+             box-shadow: 0px 0px 30px rgba(116, 138, 0, 0.2);
+             &:hover {
+                 background-color: #fff;
+                 color: $accent;
+                 /* border: 2px solid #ADC431; */
              }
          }
      }
@@ -425,6 +443,7 @@
          &__inner {
              display: flex;
              justify-content: space-between;
+             margin-bottom: 50px;
          }
          &__adress {
              max-width: 550px;
@@ -627,5 +646,12 @@
          }
          &__item-service {
              min-width: 350px;
+         }
+         &__btn-load {
+             display: block;
+             text-align: center;
+             padding: 16px 42px;
+             color: #FFF;
+             background-color: $accent;
          }
      }
