адаптив блока ремонтируем поломки

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,6 +10,7 @@
     .container {
         max-width: 1224px;
         margin: 0 auto;
+        padding: 0 15px;
     }
     
     .container-slider {
