--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -79,16 +79,12 @@
      }
      
      .slider-choice {
-         padding: 45px 0;
+         margin: 45px 0;
          &__item {
              border: 2px solid $border;
              background-color: #fff;
              display: flex;
-             justify-content: center;
-             max-width: 330px;
-             height: 260px;
-             box-shadow: 0px 0px 30px rgba(116, 138, 0, 0.2);
-             margin: 20px 40px;
+             min-height: 260px;
          }
          &__item-inner {
              padding: 0 30px;
@@ -107,6 +103,13 @@
          }
      }
      
+     .swiper-pagination-bullets {
+         background-color: #000;
+         width: 10px;
+         height: 10px;
+         margin: 0 10px;
+     }
+     
      .breaking {
          background-color: $accent;
          padding-bottom: 80px;
@@ -123,7 +126,6 @@
      .breaking-item {
          background-color: #fff;
          min-width: 590px;
-         min-height: 280px;
          background-repeat: no-repeat;
          background-position: bottom right;
          border: 2px solid #ADC431;
@@ -185,8 +187,8 @@
                  position: absolute;
                  width: 30px;
                  height: 30px;
-                 top: 30px;
-                 left: 27px;
+                 top: 24px;
+                 left: 18px;
              }
              &--battery::before {
                  background-image: url(/images/breaking-icons/icons/battery.svg);
