--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,5 +1,2 @@
-@import '../../node_modules/swiper/swiper.scss';
-@import '../../node_modules/slick-carousel/slick/slick.scss';
+@import '../../node_modules/swiper/swiper-bundle';
 @import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
-
-/* @import '../../node_modules/rateyo/src/jquery.rateyo'; */
