сделал адаптив страницы поломок

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,10 @@
         line-height: 24px;
         @extend%montserrat-700;
     }
+    
+    .hidden {
+        &__title,
+        &__headline {
+            display: none;
+        }
+    }
