--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,10 +1,11 @@
 $accent:#748a00;
-$border: #ADC431;
-$default:#f7fff7;
+$secondary: #ADC431;
+$black: #000000;
+$white: #ffffff;
 
 /*запасные цвета*/
 
-$default-lite:#ADC431;
+$default:#f7fff7;
 $default-dark:#4B5A00;
 $default-3:#5B681A;
 $default-4:#B3C458;
