--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -16,9 +16,8 @@
     
     .title {
         font-size: 28px;
-        /* line-height: 135%; */
         line-height: 38px;
-        padding: 100px 0 45px;
+        padding: 60px 0 45px;
         text-align: center;
         text-transform: uppercase;
     }
@@ -33,5 +32,45 @@
         &__title,
         &__headline {
             display: none;
+        }
+    }
+    /*КНОПКА НАВЕРХ */
+    
+    .button-up {
+        display: inline-block;
+        background-color: $secondary;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        border-radius: 3px;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        transition: background-color .3s, opacity .5s, visibility .5s;
+        opacity: 0;
+        visibility: hidden;
+        z-index: 1000;
+        border: 2px solid $accent;
+        &::after {
+            content: "";
+            position: absolute;
+            background-image: url('../images/icons/arrow-up.svg');
+            top: 8px;
+            left: 11px;
+            width: 25px;
+            height: 30px;
+            color: #fff;
+        }
+        &:hover {
+            cursor: pointer;
+            background-color: $accent;
+        }
+        &:active {
+            background-color: $accent;
+        }
+        &.show {
+            opacity: 1;
+            visibility: visible;
+            box-shadow: 0px 0px 30px rgba(116, 138, 0, 0.2);
         }
     }
